# rust_serialization_benchmark

./: .gitignore  2021-11-29.txt  ADDING_BENCHMARKS.md  Cargo.toml  README.md  README.md.template  README.mdi.md  build.rs  build.sh  clippy.sh  format.js  how_to_profile.md  index.html  pages.js  pages_bg.wasm  result.md  run.js  rustfmt.toml  update_benchmark.js  update_benchmark.mjs
.github/workflows/: bench.yml  build.yml
benches/: bench.rs  log.rs  mesh.rs  minecraft_savedata.rs
benchmark_results/: 2021-3-13.txt  2021-3-18.txt  2021-4-30.txt  2021-4-7.txt  2021-4-7_2.txt  2021-7-29.txt  2021-7-8.txt  2021-7-8_2.txt  2021-9-7.txt  2021-9-7_2.txt  2022-06-20.txt  2022-10-7.txt  2022-3-14.txt  2022-7-24.txt  2023-11-1_13-41-22.json  2023-11-2_12-2-42.json  2023-11-5_23-45-31.json  2023-3-12.txt  2023-4-19.txt  2023-4-27.txt  2023-5-14.txt  2023-5-4.txt  2023-5-8.txt  2023-6-10.txt  2023-7-13_15-22-53.json  2023-7-14_13-55-59.json  2023-7-14_20-32-42.json  2023-7-14_22-29-39.json  2023-7-20_12-47-51.json  2023-7-22_15-19-11.json  2023-7-3.txt  2023-7-7_2-13-59.json  2023-8-30_22-37-21.json  2023-9-6_12-8-26.json  2024-1-6_17-59-33.json  2024-11-4_21-8-36.json  2024-11-4_23-36-44.json  2024-12-22_5-2-21.json  2024-2-22_22-34-37.json  2024-2-6_17-59-10.json  (+49 more)
docs/: rust_serialization_benchmark_github_pages.js  rust_serialization_benchmark_github_pages_bg.wasm
pages/: .gitignore  Cargo.toml  README.md  Trunk.prod.toml  build.rs  index.html
pages/.cargo/: config.toml
pages/dist_prod/: index.html  rust_serialization_benchmark_github_pages_bg.wasm
pages/src/: calc.rs  compression.rs  event.rs  main.rs  mode.rs  row.rs
protobuf4-generated/: Cargo.toml
protobuf4-generated/src/: lib.rs
protobuf4-generated/src/log/: generated.rs  log.u.pb.rs
protobuf4-generated/src/mesh/: generated.rs  mesh.u.pb.rs
protobuf4-generated/src/minecraft_savedata/: generated.rs  minecraft_savedata.u.pb.rs
protobuf4-generated/src/mk48/: generated.rs  mk48.u.pb.rs
src/: bench_abomonation.rs  bench_alkahest.rs  bench_bare.rs  bench_bebop.rs  bench_bilrost.rs  bench_bin_proto.rs  bench_bincode.rs  bench_bincode1.rs  bench_bincode2.rs  bench_bitcode.rs  bench_borsh.rs  bench_brief.rs  bench_bson.rs  bench_buffa.rs  bench_capnp.rs  bench_cbor.rs  bench_cbor4ii.rs  bench_ciborium.rs  bench_columnar.rs  bench_compactly.rs  bench_databuf.rs  bench_dlhn.rs  bench_flatbuffers.rs  bench_flexbuffers.rs  bench_flexon.rs  bench_fury.rs  bench_minicbor.rs  bench_msgpacker.rs  bench_nachricht.rs  bench_nachricht_serde.rs  bench_nanoserde.rs  bench_nibblecode.rs  bench_parity_scale_codec.rs  bench_postcard.rs  bench_pot.rs  bench_prost.rs  bench_protobuf.rs  bench_protobuf4.rs  bench_quickxml.rs  bench_rkyv.rs  (+15 more)
src/datasets/: mod.rs
src/datasets/log/: log.bop  log.capnp  log.fbs  log.proto  log_bebop.rs  log_capnp.rs  log_generated.rs  mod.rs  prost.log.rs
src/datasets/log/log_buffa/: log.__view.rs  log.rs  mod.rs  prost.log.mod.rs
src/datasets/log/log_protobuf/: log.rs  mod.rs
src/datasets/mesh/: mesh.bop  mesh.capnp  mesh.fbs  mesh.proto  mesh_bebop.rs  mesh_capnp.rs  mesh_generated.rs  mod.rs  prost.mesh.rs
src/datasets/mesh/mesh_buffa/: mesh.__view.rs  mesh.rs  mod.rs  prost.mesh.mod.rs
src/datasets/mesh/mesh_protobuf/: mesh.rs  mod.rs
src/datasets/minecraft_savedata/: minecraft_savedata.bop  minecraft_savedata.capnp  minecraft_savedata.fbs  minecraft_savedata.proto  minecraft_savedata_bebop.rs  minecraft_savedata_bilrost.rs  minecraft_savedata_capnp.rs  minecraft_savedata_generated.rs  mod.rs  prost.minecraft_savedata.rs
src/datasets/minecraft_savedata/minecraft_savedata_buffa/: minecraft_savedata.__view.rs  minecraft_savedata.rs  mod.rs  prost.minecraft_savedata.mod.rs
src/datasets/minecraft_savedata/minecraft_savedata_protobuf/: minecraft_savedata.rs  mod.rs
src/datasets/mk48/: mk48.bop  mk48.capnp  mk48.fbs  mk48.proto  mk48_bebop.rs  mk48_bilrost.rs  mk48_capnp.rs  mk48_generated.rs  mod.rs  prost.mk48.rs
src/datasets/mk48/mk48_buffa/: mk48.__view.rs  mk48.rs  mod.rs  prost.mk48.mod.rs
src/datasets/mk48/mk48_protobuf/: mk48.rs  mod.rs
tools/: README.md.template  config.json
tools/bencher/: Cargo.toml
tools/bencher/src/: main.rs
tools/formatter/: Cargo.toml
tools/formatter/src/: main.rs
tools/parser/: Cargo.toml
tools/parser/src/: main.rs
tools/schema/: Cargo.toml
tools/schema/src/: lib.rs
