cargo-features = ["panic-immediate-abort"]

[package]
name = "pages"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
enum-iterator.workspace = true
fixed-map.workspace = true
schema.workspace = true
serde_json.workspace = true
stylist = { workspace = true, features = ["macros", "yew_integration"] }
wasm-bindgen.workspace = true
yew = { workspace = true, features = ["csr"] }

[dependencies.web-sys]
workspace = true
features = [
    'HtmlInputElement',
    'HtmlSelectElement',
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 'z'
panic = "immediate-abort"
strip = "debuginfo"
