[package]
name = "formatter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
schema.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
