[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cargo_metadata.workspace = true
clap = { workspace = true, features = ["derive"] }
regex.workspace = true
schema.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
